# libstlseries

./: CMakeLists.txt  README.md  lib.c  meson.build  stlseries.h
stlseries_gui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stlseries_gui.pro
udev/: 99-stlseries.rules
